--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Erick Altamirano erickaltamirano07@hotmail.com",
   "license": "MIT",
   "dependencies": {
+    "node-fetch": "^3.3.0",
     "xmlhttprequest": "^1.8.0"
-  }
+  },
+  "type": "module"
 }
